--- a/FileManager/project.properties
+++ b/FileManager/project.properties
@@ -7,6 +7,7 @@
 # "ant.properties", and override values to adapt the script to your
 # project structure.
 
-android.library.reference.1=../../distribution/DistributionLibrary
 # Project target.
 target=android-19
+android.library=true
+android.library.reference.1=../../All-In-One-Toolbox/All-In-One-Toolbox/Toolbox_BaseLibrary
