--- a/FileManager/project.properties
+++ b/FileManager/project.properties
@@ -10,5 +10,4 @@
 # Project target.
 target=android-19
 android.library=true
-android.library.reference.1=..\\..\\ImoblifeLibrary
-android.library.reference.2=../../All-In-One-Toolbox/Toolbox_BaseLibrary
+android.library.reference.1=..\\..\\All-In-One-Toolbox\\Toolbox_BaseLibrary
