--- a/FileManager/project.properties
+++ b/FileManager/project.properties
@@ -8,6 +8,6 @@
 # project structure.
 
 # Project target.
-target=android-19
+target=Google Inc.:Google APIs:21
 android.library=true
 android.library.reference.1=..\\..\\All-In-One-Toolbox\\Toolbox_BaseLibrary
