--- a/FileManager/AndroidManifest.xml
+++ b/FileManager/AndroidManifest.xml
@@ -64,9 +64,9 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
-  <uses-feature
-        android:name="android.hardware.touchscreen"
-        android:required="false" />
+  <!--<uses-feature-->
+        <!--android:name="android.hardware.touchscreen"-->
+        <!--android:required="false" />-->
 
     <uses-permission android:name="com.android.launcher.permission.INSTALL_SHORTCUT" />
 
