--- a/FileManagerDemo/AndroidManifest.xml
+++ b/FileManagerDemo/AndroidManifest.xml
@@ -11,7 +11,7 @@
 	<uses-sdk android:minSdkVersion="2" android:targetSdkVersion="19"/>
 	<uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
 
-    <application android:icon="@drawable/icon" android:label="@string/app_name">
+    <application  android:label="@string/app_name">
         <activity android:name=".Demo"
                   android:label="@string/app_name">
             <intent-filter>
