--- a/FileManagerTest/AndroidManifest.xml
+++ b/FileManagerTest/AndroidManifest.xml
@@ -5,7 +5,7 @@
       android:versionName="1.0">
     <uses-sdk android:minSdkVersion="3" android:targetSdkVersion="15" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
-    <application android:icon="@drawable/icon" android:label="@string/app_name">
+    <application  android:label="@string/app_name">
 
     <uses-library android:name="android.test.runner" />
     </application>
